--- a/Assets/UI/End_Day.uxml
+++ b/Assets/UI/End_Day.uxml
@@ -1,9 +1,12 @@
 <ui:UXML xmlns:ui="UnityEngine.UIElements" xmlns:uie="UnityEditor.UIElements" editor-extension-mode="False">
-    <ui:VisualElement name="root" style="height: auto;">
-        <ui:VisualElement name="Progress" style="height: 1224px;" />
-        <ui:GroupBox name="Buttons" style="flex-wrap: nowrap; flex-direction: row; justify-content: center; height: 30%; width: 100%;">
-            <ui:Button text="Quit Game" display-tooltip-when-elided="true" name="Quit" style="height: auto; justify-content: center; align-items: center; font-size: 50%;" />
-            <ui:Button text="Next Day" display-tooltip-when-elided="true" name="NextDay" style="font-size: 52%;" />
+    <ui:VisualElement name="root" style="height: 100%; width: 100%;">
+        <ui:VisualElement name="Progress" style="height: 60%; width: 100%;" />
+        <ui:VisualElement focusable="true" style="width: 100%; height: 30%;">
+            <ui:Label display-tooltip-when-elided="true" name="Text" style="font-size: 10px;" />
+        </ui:VisualElement>
+        <ui:GroupBox name="Buttons" style="flex-wrap: nowrap; flex-direction: row; justify-content: center; height: 10%; width: 100%; margin-bottom: 0; margin-top: 0; margin-right: 0; margin-left: 0; padding-left: 0; padding-top: 0; padding-bottom: 0;">
+            <ui:Button text="Quit Game" display-tooltip-when-elided="true" name="Quit" style="height: 100%; justify-content: center; align-items: center; font-size: 10%; width: 30%;" />
+            <ui:Button text="Next Day" display-tooltip-when-elided="true" name="NextDay" style="height: 100%; justify-content: center; align-items: center; font-size: 10%; width: 30%; white-space: nowrap;" />
         </ui:GroupBox>
     </ui:VisualElement>
 </ui:UXML>
